# NCUC_standalone

./: .env.example  .gitignore  AGENTS.md  AGENT_ONBOARDING.md  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: streamlit_dep_res_app.py  streamlit_duke_residential.py  streamlit_eia_app.py  streamlit_rag.py  streamlit_rate_comparison_app.py  streamlit_res_comparison_app.py
config/: ollama_models.yaml
dashboard_views/: dep_res_history.py  eia_context.py  historical_trends.py  rate_comparison.py  yoy_bill_escalation.py
docs/: CHECKSUM_DATABASE_REFERENCE.md  CHECKSUM_QUICK_FACTS.md  CHECKSUM_STORAGE_ARCHITECTURE.md  CLI_REFACTOR_PLAN.md  COMPREHENSIVE_SESSION_SUMMARY_2026_04_21.md  CORRECT_NCUC_DOCKET_FETCH_PROCEDURE.md  DEDUP_QUICK_REFERENCE.md  DUPLICATE_DETECTION_GUIDE.md  EXTRACTION_QUALITY_PIPELINE.md  NCUC_PORTAL_AUTH_SOLUTION.md  NCUC_PORTAL_WORKING_METHOD.md  NEXT_SESSION_PRIORITIES.md  NEXT_SESSION_START_HERE.md  OCR_IMPLEMENTATION_PLAN.md  ONBOARDING_ASSESSMENT_2026_04_21.md  PARSING_ARCHITECTURE_REFACTOR_PLAN.md  SESSION_2026_04_21_CONTINUATION_PHASE.md  SESSION_2026_04_21_FINAL_SUMMARY.md  SESSION_2026_04_21_MISSING_DOC_RECOVERY.md  SESSION_2026_04_21_PART2_EXECUTION.md  SESSION_35_FINDINGS_AND_RECOMMENDATIONS.md  SESSION_35_NCUC_DOWNLOAD_STRATEGY.md  agent_change_checklist.md  agent_task_routing.md  agent_tool_registry.json  agent_tool_use_policy.md  agent_workflows.json  architecture.md  cli_command_reference.md  docling_integration_plan.md  document_intelligence_architecture.md  document_intelligence_roadmap.md  document_parsing_pipeline_guide.md  (+22 more)
(+659 files in other folders)
