[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duke-rates"
version = "0.1.0"
description = "Standalone Duke Energy tariff discovery, parsing, cataloging, and bill-estimation platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" },
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "lxml>=5.2.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dateutil>=2.9.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0",
]
pdf = [
  "pdfplumber>=0.11.0",
  "pymupdf>=1.24.0",
]
ocr = [
  "pytesseract>=0.3.10",
  "Pillow>=10.3.0",
]
ocr-advanced = [
  "numpy>=1.26.0",
  "paddleocr>=2.8.1",
]
docling = [
  "docling>=2.0.0",
]
ai = [
  "openai>=1.30.0",
]
mcp = [
  "mcp>=1.0.0",
]
viz = [
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "streamlit>=1.40.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
duke-rates = "duke_rates.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = [
  "B008",
  "UP047",
]
